--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,6 @@
     android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:defaultHost="true"
+    app:defaultNavHost="true"
     app:navGraph="@navigation/main_navigation"
     tools:context=".presentation.activity.Main" />
