--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -15,6 +15,79 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@id/actions_bar"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/image_i"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/app_name"
+                android:scaleType="fitCenter"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/title_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="16dp"
+                android:autofillHints="text"
+                android:background="@color/color_25_transparent_black"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:hint="@string/hint_title"
+                android:includeFontPadding="false"
+                android:inputType="text"
+                android:padding="0dp"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                app:layout_constraintTop_toTopOf="@id/image_i"
+                tools:ignore="LabelFor" />
+
+            <EditText
+                android:id="@+id/subtitle_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="25dp"
+                android:autofillHints="text"
+                android:background="@color/color_25_transparent_black"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:hint="@string/hint_subtitle"
+                android:includeFontPadding="false"
+                android:inputType="text"
+                android:padding="0dp"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@id/image_i"
+                tools:ignore="LabelFor" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
     <LinearLayout
         android:id="@+id/image_info_container"
         android:layout_width="match_parent"
@@ -101,79 +174,6 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@id/actions_bar"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/image_i"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/app_name"
-                android:scaleType="fitCenter"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/title_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="16dp"
-                android:autofillHints="text"
-                android:background="@color/color_25_transparent_black"
-                android:fontFamily="sans-serif"
-                android:gravity="center"
-                android:hint="@string/hint_title"
-                android:includeFontPadding="false"
-                android:inputType="text"
-                android:padding="0dp"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:visibility="invisible"
-                app:layout_constraintTop_toTopOf="@id/image_i"
-                tools:ignore="LabelFor" />
-
-            <EditText
-                android:id="@+id/subtitle_field"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="25dp"
-                android:autofillHints="text"
-                android:background="@color/color_25_transparent_black"
-                android:fontFamily="sans-serif"
-                android:gravity="center"
-                android:hint="@string/hint_subtitle"
-                android:includeFontPadding="false"
-                android:inputType="text"
-                android:padding="0dp"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@id/image_i"
-                tools:ignore="LabelFor" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/actions_bar"
         android:layout_width="match_parent"
@@ -182,22 +182,22 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/meme_container"
+            android:id="@+id/edit_container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toStartOf="@id/info_container"
             app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
-                android:id="@+id/meme_i"
+                android:id="@+id/edit_i"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/app_name"
-                app:srcCompat="@drawable/ic_meme" />
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                app:srcCompat="@drawable/ic_edit" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -205,17 +205,17 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toStartOf="@id/delete_container"
-            app:layout_constraintStart_toEndOf="@id/meme_container">
+            app:layout_constraintStart_toEndOf="@id/edit_container">
 
             <ImageView
                 android:id="@+id/info_i"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/app_name"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
                 app:srcCompat="@drawable/ic_info" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -231,10 +231,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/app_name"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
                 app:srcCompat="@drawable/ic_delete" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
